# Nave

./: Makefile  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: main.yaml  main.yml
dist-isolation/: index.html
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/etc/: clash.yaml
src-tauri/etc/ruleset/: cncidr.yaml  direct.yaml  proxy.yaml  reject.yaml
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  main.rs  menu.rs  setup.rs
src-tauri/src/sysproxy/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: Confirm.vue  Modal.vue  Option.vue  Select.vue  Toast.vue
src/modules/: ServerForm.vue  ServerList.vue
src/store/: server.ts  setting.ts
src/util/: clash.ts  index.ts
src/views/: Logger.vue  Server.vue  Setting.vue
