[package]
name = "nave"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = ["isolation"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["isolation", "path-all", "shell-sidecar"] }
pinger = "0.4.1"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
interfaces = "0.0.8"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = {version = "0.10", features = ["transactions"] }
winapi = {version = "0.3.9", features= ["wininet"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
